# magic8-ball-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: apidef-warnings.txt  package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  magic8-ball.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  magic8-ball_sdk.lua  (+2 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  magic8ball_sdk.py  magic8ball_types.py  pyproject.toml
py/core/: context.py  spec.py  utility_type.py
py/entity/: biased_entity.py  category_entity.py  category_fortune_entity.py  random_fortune_entity.py
py/feature/: clienttrack_feature.py  metrics_feature.py  netsim_feature.py  ratelimit_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_biased_direct.py  test_biased_entity.py  test_category_direct.py  test_category_entity.py  test_category_fortune_direct.py  test_category_fortune_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_random_fortune_entity.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_spec.py  param.py  prepare_headers.py  prepare_params.py  register.py  transform_response.py
(+471 files in other folders)
